--- a/admin/chef-detail-johnconstatine.html
+++ b/admin/chef-detail-johnconstatine.html
@@ -67,6 +67,115 @@
       max-width: 600px;
       margin: 0 auto;
     }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f0f2f5;
+      color: #344767;
+      line-height: 1.6;
+      overflow-x: hidden;
+    }
+
+    .card {
+      width: 90%;
+      max-width: 800px;
+      margin: 0 auto;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      padding: 2rem;
+    }
+
+    .form-row {
+      display: flex;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+      align-items: flex-start;
+    }
+
+    .form-group {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 1rem;
+    }
+
+    .form-group label {
+      font-weight: 500;
+      margin-bottom: 0.4rem;
+    }
+
+    .form-control {
+      padding: 0.5rem 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    .img-upload {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      border: 1px dashed #ccc;
+      border-radius: 6px;
+      padding: 1rem;
+      width: 180px;
+      height: 180px;
+      background-color: #fafafa;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .img-upload:hover {
+      border-color: #e88f2a;
+      background-color: #fff6ec;
+    }
+
+    .img-upload img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 6px;
+    }
+
+    .toggle-password {
+      position: absolute;
+      right: 10px;
+      top: 70%;
+      transform: translateY(-50%);
+      background: transparent;
+      border: none;
+      color: #7b8794;
+      cursor: pointer;
+    }
+
+    .form-inline {
+      display: flex;
+      gap: 1rem;
+    }
+
+    .btn {
+      border: none;
+      border-radius: 6px;
+      padding: 0.75rem 1.5rem;
+      cursor: pointer;
+      transition: 0.3s;
+      font-weight: 600;
+    }
+
+    .btn-secondary {
+      background-color: #ccc;
+    }
+
+    .btn-gradient {
+      background: linear-gradient(195deg, #e88f2a, #e88f2a);
+      color: white;
+    }
+
+    .btn-gradient:hover {
+      opacity: 0.9;
+    }
   </style>
 </head>
 
@@ -116,10 +225,6 @@
               padding: 0.75rem 1rem;
               color: white;
               text-decoration: none;
-              background: linear-gradient(195deg, #e88f2a, #e88f2a);
-              box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2),
-            0 7px 10px -5px rgba(240, 163, 74, 0.6);
-
             "><i class="material-icons" style="margin-right: 10px"></i>Quản
           lý khách hàng</a>
       </li>
@@ -130,6 +235,9 @@
               padding: 0.75rem 1rem;
               color: white;
               text-decoration: none;
+              background: linear-gradient(195deg, #e88f2a, #e88f2a);
+              box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2),
+            0 7px 10px -5px rgba(240, 163, 74, 0.6);
             "><i class="material-icons" style="margin-right: 10px"></i>Quản
           lý đầu bếp</a>
       </li>
@@ -162,7 +270,7 @@
             "><i class="material-icons" style="margin-right: 10px"></i>Quản lý danh mục</a>
       </li>
       <li>
-        <a href="phieunhap.html" style="
+        <a href="import.html" style="
               display: flex;
               align-items: center;
               padding: 0.75rem 1rem;
@@ -200,64 +308,81 @@
 
   <!-- Main -->
   <main style="margin-left: 250px; min-height: 100vh; padding: 1.5rem;">
-    <h1 style="margin-bottom: 1rem">Thông tin khách hàng</h1>
-    <div style="padding-top: 1.5rem; padding-bottom: 1.5rem;">
-      <div class="card">
-        <div class="card-body">
-          <form id="editForm">
-            <div class="form-group">
-              <label for="fullname" class="form-label">Họ và tên <span style="color: #e88f2a;">*</span></label>
-              <input type="text" class="form-control" id="fullname" name="fullname" value="Nguyễn Văn A" required>
-            </div>
+    <h1 style="margin-bottom: 1rem">Thông tin đầu bếp</h1>
 
-            <div class="form-group">
-              <label for="username" class="form-label">Tên tài khoản <span style="color: #e88f2a;">*</span></label>
-              <input type="text" class="form-control" id="username" name="username" value="nguyenvana" required>
-            </div>
+    <div class="card">
+      <form id="editForm" style="display: flex; gap: 2rem; align-items: flex-start;">
 
-            <div class="form-group">
-              <label for="email" class="form-label">Email <span style="color: #e88f2a;">*</span></label>
-              <input type="email" class="form-control" id="email" name="email" value="nguyenvana@example.com" required>
-            </div>
+        <!-- Cột trái -->
+        <div style="flex: 2;">
+          <div class="form-group">
+            <label for="fullname">Họ và tên <span style="color: #e88f2a;">*</span></label>
+            <input type="text" id="fullname" class="form-control" value="Nguyễn Văn A" required>
+          </div>
 
-            <div class="form-group password-field">
-              <label for="password" class="form-label">Mật khẩu <span style="color: #e88f2a;">*</span></label>
-              <input type="password" class="form-control" id="password" name="password" value="123456" required>
-              <button type="button" class="toggle-password" onclick="togglePassword()" title="Hiển thị mật khẩu">
+          <div class="form-group">
+            <label for="username">Tên tài khoản <span style="color: #e88f2a;">*</span></label>
+            <input type="text" id="username" class="form-control" value="nguyenvana" required>
+          </div>
+
+          <div class="form-group">
+            <label for="email">Email <span style="color: #e88f2a;">*</span></label>
+            <input type="email" id="email" class="form-control" value="nguyenvana@example.com" required>
+          </div>
+
+          <!-- Mật khẩu + Vị trí -->
+          <div class="form-row" style="display: flex; gap: 1rem;">
+            <div class="form-group" style="flex: 1; position: relative;">
+              <label for="password">Mật khẩu <span style="color: #e88f2a;">*</span></label>
+              <input type="password" id="password" class="form-control" value="123456" required>
+              <button type="button" class="toggle-password" onclick="togglePassword()"
+                style="position: absolute; right: 10px; top: 36px; background: none; border: none; cursor: pointer;">
                 <i class="material-icons" id="eyeIcon">visibility_off</i>
               </button>
             </div>
 
-            <div class="form-group">
-              <label for="phone" class="form-label">Số điện thoại <span style="color: #e88f2a;">*</span></label>
-              <input type="tel" class="form-control" id="phone" name="phone" value="0987654321" pattern="[0-9]{10,11}"
-                required>
+            <div class="form-group" style="flex: 1;">
+              <label for="position">Vị trí</label>
+              <input type="text" id="position" class="form-control" value="Đầu bếp chính">
             </div>
+          </div>
 
-            <div class="form-group">
-              <label for="address" class="form-label">Địa chỉ <span style="color: #e88f2a;">*</span></label>
-              <textarea class="form-control" id="address" name="address" rows="3"
-                required>123 Đường ABC, Quận 1, TP. HCM</textarea>
-            </div>
+          <div class="form-group">
+            <label for="phone">Số điện thoại <span style="color: #e88f2a;">*</span></label>
+            <input type="tel" id="phone" class="form-control" value="0987654321" pattern="[0-9]{10,11}" required>
+          </div>
 
+          <div class="form-group">
+            <label for="address">Địa chỉ <span style="color: #e88f2a;">*</span></label>
+            <textarea id="address" class="form-control" rows="3" required>123 Đường ABC, Quận 1, TP. HCM</textarea>
+          </div>
 
-
-            <!-- Buttons -->
-            <div
-              style="display: flex; justify-content: center; gap: 1rem; margin-top: 2rem; padding-top: 2rem; border-top: 1px solid #dee2e6;">
-              <button type="button" class="btn btn-secondary" onclick="window.location.href='user.html'">Quay
-                về</button>
-              <button type="submit" class="btn btn-gradient" style="padding: 0.75rem 2rem; font-weight: 600;">
-                <i class="material-icons"
-                  style="font-size: 1rem; margin-right: 0.5rem; vertical-align: middle;">save</i>
-                Lưu thay đổi
-              </button>
-            </div>
-          </form>
+          <!-- Buttons -->
+          <div style="display: flex; justify-content: center; gap: 1rem; margin-top: 2rem;">
+            <button type="button" class="btn btn-secondary" onclick="window.location.href='chef.html'">Quay về</button>
+            <button type="submit" class="btn btn-gradient">
+              <i class="material-icons" style="font-size: 1rem; margin-right: 0.5rem;">save</i>
+              Lưu thay đổi
+            </button>
+          </div>
         </div>
-      </div>
+
+        <!-- Cột phải: Ảnh -->
+        <div style="flex: 1; display: flex; justify-content: center;">
+          <div class="form-group" style="display: flex; flex-direction: column; align-items: center;">
+            <label for="imageUpload" style="visibility:hidden;">Chọn hình ảnh</label>
+            <label for="imageUpload" class="img-upload" id="imagePreview"
+              style="border: 1px dashed #ccc; border-radius: 6px; width: 180px; height: 180px; display: flex; flex-direction: column; justify-content: center; align-items: center; color: #666; cursor: pointer;">
+              <span class="material-icons" style="font-size: 40px;">add_a_photo</span>
+              <span style="font-size: 0.9rem;">Chọn hình ảnh</span>
+            </label>
+            <input type="file" id="imageUpload" accept="image/*" style="display: none;">
+          </div>
+        </div>
+      </form>
     </div>
   </main>
+
 
   <script>
     // Hiện/ẩn mật khẩu
@@ -273,11 +398,24 @@
       }
     }
 
-    // Xử lý khi nhấn submit form
+    // Xem trước ảnh
+    document.getElementById("imageUpload").addEventListener("change", function (event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          const preview = document.getElementById("imagePreview");
+          preview.innerHTML = `<img src="${e.target.result}" alt="Ảnh đại diện">`;
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+
+    // Submit form
     document.getElementById("editForm").addEventListener("submit", function (e) {
-      e.preventDefault(); // Ngăn reload
-      alert("✅ Cập nhật khách hàng thành công!");
-      window.location.href = "user.html"; // Quay lại trang quản lý khách hàng
+      e.preventDefault();
+      alert("✅ Cập nhật thông tin đầu bếp thành công!");
+      window.location.href = "chef.html";
     });
   </script>
 </body>
