--- a/admin/import.html
+++ b/admin/import.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/png" href="../img/ryicon.jpg">
-  <title>BookStore - Quản lý danh mục</title>
+  <title>BookStore - Quản lý phiếu nhập</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-  <link href="assets/css/pure-style-optimized.css" rel="stylesheet" />
+  <link href="assets/css/pure-style-optimized.css" rel="stylesheet">
 
   <style>
     body {
@@ -18,7 +18,6 @@
       overflow-x: hidden;
     }
 
-    /* ==== Table ==== */
     table {
       width: 100%;
       border-collapse: collapse;
@@ -36,18 +35,7 @@
     th, td {
       padding: 14px 16px;
       font-size: 14px;
-      border-bottom: 1px solid #e0e0e0;
-    }
-
-    th {
-      text-transform: uppercase;
-      font-size: 12px;
-      letter-spacing: 0.5px;
-      text-align: center;
-    }
-
-    td {
-      vertical-align: middle;
+      text-align: left;
     }
 
     tbody tr:nth-child(even) {
@@ -59,16 +47,13 @@
       transition: 0.2s;
     }
 
-    /* Căn giữa các cột STT và Thao tác */
-    td:nth-child(1), th:nth-child(1),
-    td:nth-child(4), th:nth-child(4) {
-      text-align: center;
+    th {
+      text-transform: uppercase;
+      font-size: 12px;
+      letter-spacing: 0.5px;
     }
 
-    .material-icons-round {
-      font-size: 18px;
-      vertical-align: middle;
-    }
+    .material-icons-round { font-size: 18px; vertical-align: middle; }
 
     /* ==== Actions ==== */
     .actions {
@@ -90,17 +75,14 @@
       transition: 0.2s;
     }
 
-    .btn-edit { background-color: #1976d2; }
-    .btn-edit:hover { background-color: #144f8a; }
-
-    .btn-delete { background-color: #e53935; }
-    .btn-delete:hover { background-color: #ef5350; }
-
-    /* Add button */
+    .btn-view { background-color: #1976d2; }
+    .btn-view:hover { background-color: #144f8a; }
+    
+    /* ==== Add Button ==== */
     .btn-add {
       display: inline-flex;
       align-items: center;
-      gap: 8px;
+      gap: 6px;
       background: linear-gradient(195deg, #ff9800, #f57c00);
       color: white;
       padding: 10px 18px;
@@ -110,12 +92,14 @@
       border: none;
       cursor: pointer;
       box-shadow: 0 3px 6px rgba(255, 152, 0, 0.3);
+      transition: all 0.2s ease;
     }
 
     .btn-add:hover {
+      background: linear-gradient(195deg, #ffa726, #fb8c00);
       transform: translateY(-2px);
+      box-shadow: 0 6px 10px rgba(255, 152, 0, 0.4);
     }
-
   </style>
 </head>
 
@@ -202,18 +186,18 @@
               padding: 0.75rem 1rem;
               color: white;
               text-decoration: none;
-              background: linear-gradient(195deg, #e88f2a, #e88f2a);
-              box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2),
-            0 7px 10px -5px rgba(240, 163, 74, 0.6);
             "><i class="material-icons" style="margin-right: 10px"></i>Quản lý danh mục</a>
       </li>
       <li>
-        <a href="import.html" style="
+        <a href="phieunhap.html" style="
               display: flex;
               align-items: center;
               padding: 0.75rem 1rem;
               color: white;
               text-decoration: none;
+              background: linear-gradient(195deg, #e88f2a, #e88f2a);
+              box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2),
+            0 7px 10px -5px rgba(240, 163, 74, 0.6);
             "><i class="material-icons" style="margin-right: 10px"></i>Quản lý nhập hàng</a>
       </li>
       <li>
@@ -245,12 +229,12 @@
   </aside>
 
   <!-- MAIN -->
-  <main style="margin-left:250px;min-height:100vh;padding:1.5rem;">
-    <h1 style="margin-bottom: 1rem">Quản lý danh mục</h1>
-    <!-- Button Add Category -->
+  <main style="margin-left: 250px; min-height: 100vh; padding: 1.5rem;">
+    <h1 style="margin-bottom: 1rem">Quản lý nhập hàng</h1>
+    <!-- Button Add Import -->
     <div style="margin-bottom:1.2rem;text-align:left;">
-      <button class="btn-add" onclick="window.location.href='add-category.html'">
-        <i class="material-icons-round">add_circle</i> Thêm danh mục
+      <button class="btn-add" onclick="window.location.href='themphieunhap.html'">
+        <i class="material-icons-round">add_box</i> Thêm phiếu nhập
       </button>
     </div>
 
@@ -258,63 +242,48 @@
       <thead>
         <tr>
           <th>STT</th>
-          <th>Tên danh mục</th>
-          <th>Mô tả</th>
+          <th>Mã phiếu</th>
+          <th>Ngày nhập</th>
+          <th>Số lượng sản phẩm</th>
+          <th>Tổng giá trị</th>
           <th>Thao tác</th>
         </tr>
       </thead>
       <tbody>
-  <tr>
-    <td>1</td>
-    <td>Bánh sinh nhật</td>
-    <td>Các loại bánh kem và bánh tạo hình dùng cho sinh nhật, phù hợp nhiều chủ đề và độ tuổi khác nhau.</td>
-    <td>
-      <div class="actions">
-        <button class="btn btn-edit"><i class="material-icons-round">edit</i>Sửa</button>
-        <button class="btn btn-delete"><i class="material-icons-round">delete</i>Xóa</button>
-      </div>
-    </td>
-  </tr>
-
-  <tr>
-    <td>2</td>
-    <td>Bánh cưới</td>
-    <td>Bánh cưới sang trọng, thiết kế nhiều tầng với phong cách hiện đại hoặc truyền thống, dành cho lễ cưới và tiệc đính hôn.</td>
-    <td>
-      <div class="actions">
-        <button class="btn btn-edit"><i class="material-icons-round">edit</i>Sửa</button>
-        <button class="btn btn-delete"><i class="material-icons-round">delete</i>Xóa</button>
-      </div>
-    </td>
-  </tr>
-
-  <tr>
-    <td>3</td>
-    <td>Bánh ăn vặt</td>
-    <td>Các loại bánh nhỏ gọn, tiện lợi như cupcake, cookie, hoặc bánh quy, phù hợp dùng kèm trà và cà phê.</td>
-    <td>
-      <div class="actions">
-        <button class="btn btn-edit"><i class="material-icons-round">edit</i>Sửa</button>
-        <button class="btn btn-delete"><i class="material-icons-round">delete</i>Xóa</button>
-      </div>
-    </td>
-  </tr>
-</tbody>
-
+        <tr>
+          <td>1</td>
+          <td>#PN001</td>
+          <td>01-08-2025</td>
+          <td>15</td>
+          <td>12.500.000 VNĐ</td>
+          <td><div class="actions"><button class="btn btn-view"><i class="material-icons-round">visibility</i>Xem</button></div></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>#PN002</td>
+          <td>25-07-2025</td>
+          <td>8</td>
+          <td>8.750.000 VNĐ</td>
+          <td><div class="actions"><button class="btn btn-view"><i class="material-icons-round">visibility</i>Xem</button></div></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>#PN003</td>
+          <td>15-07-2025</td>
+          <td>12</td>
+          <td>15.200.000 VNĐ</td>
+          <td><div class="actions"><button class="btn btn-view"><i class="material-icons-round">visibility</i>Xem</button></div></td>
+        </tr>
+      </tbody>
     </table>
   </main>
 
   <script>
-    const editButtons = document.querySelectorAll('.btn-edit');
-    const deleteButtons = document.querySelectorAll('.btn-delete');
-
-    editButtons.forEach(btn => btn.addEventListener('click', () => {
-      window.location.href = 'edit-category.html';
-    }));
-
-    deleteButtons.forEach(btn => btn.addEventListener('click', () => {
-      alert('Xóa danh mục thành công!');
-    }));
+    document.querySelectorAll('.btn-view').forEach(btn => {
+      btn.addEventListener('click', () => {
+        window.location.href = 'chitietphieunhap.html';
+      });
+    });
   </script>
 </body>
 </html>
